Fix JRE8